operator/pkg/gateway-api/testdata/gateway/httproute-simple-same-namespace/input/httproute-simple-same-namespace.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-conformance-infra-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.196
        ipMode: VIP
